--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: 'Rajdhani', sans-serif;
-  background: url('../img/pexels-pixabay-37403.jpg') no-repeat center center/cover;
+  background: url('../img/cloud.jpg') no-repeat center center/cover;
   height: 100vh;
   color: white;
 }
