--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,7 @@ circle.progress {
   font-size: 60px;          /* nhỏ hơn (gợi ý: 80px) */
   font-weight: 900;
   text-transform: uppercase;
-  background: url('../img/pexels-pixabay-37403.jpg') no-repeat center center/cover;
+  background: url('../img/white.jpg') no-repeat center center/cover;
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
